--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
       <img>
       <img>
     </section>
-    <div>View Results</div>
+    <div class="button">View Results</div>
     <ul></ul>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla cum a, architecto id quibusdam dolores corrupti laborum consequuntur dicta repudiandae molestiae inventore sint, sequi molestias esse earum consectetur ipsa sed? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit, voluptatem. Sapiente commodi optio autem expedita laborum non libero omnis culpa quis deleniti velit vero consectetur a, incidunt distinctio, fugiat enim.</p>
+    <div id="chartDiv">
+      <canvas id="myChart"></canvas>
+    </div>
   </main>
   <footer>
 
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.0/dist/chart.umd.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
